@@ -1,6 +1,7 @@
 launchpad-buildd (217) UNRELEASED; urgency=medium
 
   * Improve deployment documentation.
+  * Make URL sanitization a little less greedy.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Jul 2022 15:07:23 +0100
 
